Fixed how the website looks on smaller devices

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -40,24 +40,16 @@ body {
 /****************************************************************************************************/
 .website-title-container {
     text-align: center;
+    padding: 40px;
 }
 
 .website-title {
     font-size: 120px;
 }
 
-.left-side {
-    padding-left: 25%;
-}
-
-.right-side {
-    width: 50%;
-    margin: 0 auto;
-}
-
 .section-title {
     font-family:  BigNoodleTitling, sans-serif;
-    font-size: 60px;
+    font-size: 52px;
     color: #FFFFFF;
     line-height: 1.1;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
@@ -65,18 +57,20 @@ body {
 
 .section-subtitle {
     font-family:  BigNoodleTitling, sans-serif;
-    font-size: 55px;
+    font-size: 48px;
     color: #F99E1A;
     line-height: 1.1;
     padding-left: 25px;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .section-subtitle a {
     font-family:  BigNoodleTitling, sans-serif;
-    font-size: 55px;
+    font-size: 48px;
     color: #F99E1A;
     line-height: 1.1;
     text-decoration: none;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 /* visited link */
@@ -97,7 +91,7 @@ body {
 
 .section-subsubtitle {
     font-family:  BigNoodleTitling, sans-serif;
-    font-size: 55px;
+    font-size: 48px;
     color: #F99E1A;
     line-height: 0.8;
     padding-left: 50px;
